# tpmp-gr9b-lab4-liagushki

./: README.md
.github/workflows/: ci.yml
project/: CMakeLists.txt
project/data/: flower.db
project/includes/: authentication.h  database.h  ui.h
project/src/: authentication.cpp  database.cpp  main.cpp  ui.cpp
project/tests/: CMakeLists.txt  authentication_test.cpp  database_test.cpp  ui_test.cpp
